tests/expectations/compiler/slice/inclusive_without_end_fail.out
Error [EPAR0370054]: Inclusive ranges must be bounded at the end (`..=b` or `a..=b`)
    --> compiler-test:5:20
     |
   5 |         let arr2 = arr[..=];
     |                    ^^^^^^^^
     |
     = use `..` instead
